[gd_scene load_steps=11 format=3 uid="uid://bkpkxbjy4fnmp"]

[ext_resource type="Script" path="res://Scenes/Player/player.gd" id="1_d7s6o"]
[ext_resource type="Texture2D" uid="uid://ck41fsetdw6kq" path="res://graphics/player/player.png" id="1_jac2y"]
[ext_resource type="Texture2D" uid="uid://dnvtfnmeiveha" path="res://graphics/decals/white.png" id="3_bp5ng"]
[ext_resource type="AudioStream" uid="uid://6eriit3s5b73" path="res://audio/ough-47202 (mp3cut.net).mp3" id="4_qv51c"]
[ext_resource type="AudioStream" uid="uid://bs87co12e1qkr" path="res://audio/bottle-pop-45531.mp3" id="5_ssvnk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_bmu5h"]
radius = 64.1249

[sub_resource type="Gradient" id="Gradient_ph5dd"]
colors = PackedColorArray(0.65098, 0.968627, 0.968627, 0.482353, 0.682353, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_wpagw"]
gradient = SubResource("Gradient_ph5dd")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ipdtk"]
particle_flag_disable_z = true
direction = Vector3(50, 0, 0)
spread = 15.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 800.0
initial_velocity_max = 1000.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 0.3
scale_max = 0.8
color = Color(0, 0.905882, 0.905882, 0.34902)
color_ramp = SubResource("GradientTexture1D_wpagw")

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_pc0l0"]
polygon = PackedVector2Array(-11, -60, 6, -40, 9, -32, 23, -28, 42, -10, 49, -13, 59, -6, 70, -4, 72, -1, 85, 1, 82, 6, 95, 7, 98, 19, 93, 32, 84, 30, 86, 36, 73, 33, 66, 43, 61, 41, 59, 49, 57, 53, 26, 52, 20, 44, 6, 40, -23, 54, -44, 63, -67, 57, -75, 46, -76, 40, -79, 36, -88, 27, -88, 19, -96, 9, -98, -13, -92, -28, -84, -46, -71, -47, -59, -56, -51, -56, -36, -60, -30, -54)

[node name="player" type="CharacterBody2D"]
collision_mask = 31
script = ExtResource("1_d7s6o")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-41, -4)
shape = SubResource("CircleShape2D_bmu5h")

[node name="player image" type="Sprite2D" parent="."]
rotation = 1.5708
texture = ExtResource("1_jac2y")

[node name="laser_timer" type="Timer" parent="."]
wait_time = 0.3

[node name="grenade_timer" type="Timer" parent="."]
wait_time = 2.0

[node name="Shoting pos" type="Node2D" parent="."]
position = Vector2(92, -4)

[node name="GPUParticles2D" type="GPUParticles2D" parent="Shoting pos"]
position = Vector2(4, 24)
emitting = false
amount = 5
process_material = SubResource("ParticleProcessMaterial_ipdtk")
texture = ExtResource("3_bp5ng")
lifetime = 0.15
one_shot = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_pc0l0")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_qv51c")

[node name="grenade throw" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_ssvnk")
volume_db = 3.0

[connection signal="timeout" from="laser_timer" to="." method="_on_laser_timer_timeout"]
[connection signal="timeout" from="grenade_timer" to="." method="_on_grenade_timer_timeout"]
